--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npa-bug-library",
+  "name": "@somescope/npa-bug-library",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
